<resources>
    <string name="app_name">Student Diary</string>
    <string name="logotext1">Student Diary</string>
    <string name="topweek">Верхняя неделя</string>
    <string name="bottomweek">Нижняя неделя</string>
    <string name="studtoken">Студенческий</string>
    <string name="timetable">Расписание</string>
    <string name="qrcode">QR CODE</string>
    <string name="timetabletext">Твой студенческий билет</string>
    <string name="title_activity_timetable">Расписание</string>
    <string name="large_text">

        "Верхняя неделя \n\n"
        "Понедельник \n"
        "12:20-13:50 Документирование и сертификация, УЛК1, 319, Практика, Дусманова Э.Ю.\n"
        "14:00-15:30 Основы философии, УЛК1, 319, Практика, Левченко М.В.\n"
        "15:40-17:10 Иностранный язык, УЛК1, 319, Практика, Соколова И.А.\n"
        "17:20-18:50 Документирование и сертификация, УЛК1, 319, Практика, Дусманова Э.Ю.\n\n"
        "Вторник \n"
        "12:20-13:50 Физическая культура, УЛК6, Практика, Фатыхов И.Ф.\n"
        "14:00-15:30 Окно \n"
        "15:40-17:10 Прикладное программирование, УЛК1, 360, Практика, Галимова А.Ф.\n"
        "17:20-18:50 Прикладное программирование, УЛК1, 360, Практика, Галимова А.Ф.\n\n"
        "Среда \n"
        "10:10-11:40 Основы философии, УЛК1, 456, Лекция, Левченко М.В.\n"
        "12:20-13:50 Основы философии, УЛК1, 456, Лекция, Левченко М.В.\n"
        "14:00-15:30 Прикладное программирование, УЛК1, 456, Лекция, Галимова А.Ф.\n"
        "15:40-17:10 Прикладное программирование, УЛК1, 456, Лекция, Галимова А.Ф.\n\n"
        "Четверг\n"
        "Нет расписания \n\n"
        "Пятница\n"
        "12:20-13:50 Прикладное программирование, УЛК1, 362, Практика, Галимова А.Ф.\n"
        "14:00-15:30 Прикладное программирование, УЛК1, 362, Практика, Галимова А.Ф.\n"
        "15:40-17:10 Прикладное программирование, УЛК1, 362, Практика, Галимова А.Ф.\n"
        "17:20-18:50 Прикладное программирование, УЛК1, 362, Практика, Галимова А.Ф.\n\n"
        "Суббота \n"
        "8:30-10:10 Документирование и сертификация, УЛК1, 407, Лекция, Дусманова Э.Ю.\n"
        "10:10-11:40 Документирование и сертификация, УЛК1, 407, Лекция, Дусманова Э.Ю.\n"
        "12:20-13:50 Документирование и сертификация, УЛК1, 407, Лекция, Дусманова Э.Ю.\n\n"
        "Нижняя неделя\n\n"
        "Понедельник \n"
        "12:20-13:50 Документирование и сертификация, УЛК1, 319, Практика, Дусманова Э.Ю.\n"
        "14:00-15:30 Основы философии, УЛК1, 319, Практика, Левченко М.В.\n"
        "15:40-17:10 Иностранный язык, УЛК1, 319, Практика, Соколова И.А.\n\n"
        "Вторник \n"
        "12:20-13:50 Физическая культура, УЛК6, Практика, Фатыхов И.Ф.\n"
        "14:00-15:30 Окно \n"
        "15:40-17:10 Прикладное программирование, УЛК1, 360, Практика, Галимова А.Ф.\n"
        "17:20-18:50 Прикладное программирование, УЛК1, 360, Практика, Галимова А.Ф.\n\n"
        "Среда \n"
        "10:10-11:40 Основы философии, УЛК1, 456, Лекция, Левченко М.В.\n"
        "12:20-13:50 Основы философии, УЛК1, 456, Лекция, Левченко М.В.\n"
        "14:00-15:30 Прикладное программирование, УЛК1, 456, Лекция, Галимова А.Ф.\n"
        "15:40-17:10 Прикладное программирование, УЛК1, 456, Лекция, Галимова А.Ф.\n\n"
        "Четверг\n"
        "Нет расписания \n\n"
        "Пятница\n"
        "12:20-13:50 Прикладное программирование, УЛК1, 362, Практика, Галимова А.Ф.\n"
        "14:00-15:30 Прикладное программирование, УЛК1, 362, Практика, Галимова А.Ф.\n"
        "15:40-17:10 Прикладное программирование, УЛК1, 362, Практика, Галимова А.Ф.\n"
        "17:20-18:50 Прикладное программирование, УЛК1, 362, Практика, Галимова А.Ф.\n\n"
        "Суббота \n"
        "10:10-11:40 Документирование и сертификация, УЛК1, 407, Лекция, Дусманова Э.Ю.\n"
        "12:20-13:50 Документирование и сертификация, УЛК1, 407, Лекция, Дусманова Э.Ю.\n"
        "14:00-15:30 Документирование и сертификация, УЛК1, 407, Практика, Дусманова Э.Ю.\n"
        "15:40-17:10 Документирование и сертификация, УЛК1, 407, Практика, Дусманова Э.Ю.\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>